fixed display overflow bug

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 2vh;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -23,10 +24,6 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 4.2em;
-  line-height: 1.1;
-}
 
 h2 {
   font-size: 2.5em;
@@ -67,12 +64,6 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media(max-width:500px){
-  button {
-    height: 4rem;
-    width: 4rem;
-  }
-}
 
 #calculator{
   background-color: var(--back-color);
@@ -156,5 +147,19 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+
+
+@media(max-width:500px){
+  button {
+    height: 4rem;
+    width: 4rem;
+  }
+
+  h2 {
+    font-size: 1.9em;
+    line-height: 1.1;
   }
 }
